--- a/NAPS2.Core/packages.config
+++ b/NAPS2.Core/packages.config
@@ -1,25 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.4.1" targetFramework="net45" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net48" />
-  <package id="CsvHelper" version="30.0.1" targetFramework="net48" />
-  <package id="Ghostscript.NET" version="1.2.3" targetFramework="net45" />
+  <package id="CsvHelper" version="30.1.0" targetFramework="net48" />
+  <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net48" />
   <package id="Magick.NET.Core" version="13.5.0" targetFramework="net48" />
   <package id="Magick.NET.SystemDrawing" version="7.2.1" targetFramework="net48" />
   <package id="Magick.NET-Q8-AnyCPU" version="13.5.0" targetFramework="net48" />
   <package id="MailKit" version="2.8.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
-  <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="MimeKit" version="2.9.2" targetFramework="net48" />
-  <package id="Moq" version="4.15.1" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net45" />
+  <package id="Moq" version="4.20.70" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net45" />
-  <package id="SharpZipLib" version="1.3.3" targetFramework="net451" />
+  <package id="SharpZipLib" version="1.4.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Linq.Async" version="4.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
