--- a/NAPS2.Tests/packages.config
+++ b/NAPS2.Tests/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
-  <package id="Moq" version="4.0.10827" targetFramework="net45" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="Ninject.MockingKernel" version="3.2.2.0" targetFramework="net45" />
-  <package id="Ninject.MockingKernel.Moq" version="3.2.2.0" targetFramework="net45" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
+  <package id="Moq" version="4.20.70" targetFramework="net48" />
+  <package id="Ninject" version="3.3.6" targetFramework="net48" />
+  <package id="Ninject.MockingKernel" version="3.3.0" targetFramework="net48" />
+  <package id="Ninject.MockingKernel.Moq" version="3.3.0" targetFramework="net48" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
